--- a/nodejs-logging/package.json
+++ b/nodejs-logging/package.json
@@ -17,10 +17,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "winston": "^3.15.0"
+    "winston": "^3.15.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.7",
+    "@types/jest": "^29.5.13",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
