Learn - NodeJS express part 03

--- a/nodejs-express/package.json
+++ b/nodejs-express/package.json
@@ -18,6 +18,7 @@
   "author": "Joko Santoso",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "winston": "^3.15.0"
   },
