--- a/nodejs-express/package.json
+++ b/nodejs-express/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
+    "mustache-express": "^1.3.2",
     "winston": "^3.15.0"
   },
   "devDependencies": {
